# rust-multi-demo

./: .gitignore  Cargo.toml  LICENSE  README.md
src/demo-bin/: Cargo.toml
src/demo-bin/src/: main.rs
src/demo-lib/: Cargo.toml
src/demo-lib/src/: lib.rs
src/demo-py/: Cargo.toml  pyproject.toml
src/demo-py/src/: lib.rs
src/demo-wasm/: Cargo.toml  index.html
src/demo-wasm/src/: lib.rs
